--- a/SecureRepository.csproj
+++ b/SecureRepository.csproj
@@ -8,12 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BouncyCastle.Cryptography" Version="2.2.0" />
-    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.4.0" />
+    <PackageReference Include="Serilog" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="resources\downloads\Strahinja-Samardzija\" />
     <Folder Include="resources\master\" />
     <Folder Include="resources\data\" />
     <Folder Include="resources\keystore\" />
